[gd_scene load_steps=14 format=3 uid="uid://bplobt2yqsrkn"]

[ext_resource type="Script" path="res://scenes/hammer_man/hammer_man.gd" id="1_xriwn"]
[ext_resource type="Texture2D" uid="uid://ew36lrsvo0g3" path="res://assets/art/hammer_man/HammerMan.png" id="2_375q2"]
[ext_resource type="Texture2D" uid="uid://eud55xccloly" path="res://assets/art/hammer_man/HammerManRunning-Sheet.png" id="2_p1pe4"]
[ext_resource type="Texture2D" uid="uid://bohi1q3vnhf77" path="res://assets/art/hammer_man/HammerManSlam-Sheet.png" id="4_wypc8"]
[ext_resource type="AudioStream" uid="uid://brau47leu6abo" path="res://assets/audio/Retro Jump Classic 08.wav" id="5_jnhxm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1v86"]
atlas = ExtResource("2_p1pe4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k784g"]
atlas = ExtResource("2_p1pe4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a63re"]
atlas = ExtResource("4_wypc8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebgbo"]
atlas = ExtResource("4_wypc8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dtn6e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_375q2")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1v86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k784g")
}],
"loop": true,
"name": &"running",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a63re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebgbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebgbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebgbo")
}],
"loop": false,
"name": &"slam",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08jb5"]
radius = 6.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_504md"]
radius = 7.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_80kms"]

[node name="HammerMan" type="CharacterBody2D"]
collision_layer = 2048
collision_mask = 4353
script = ExtResource("1_xriwn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dtn6e")
animation = &"slam"
autoplay = "idle"

[node name="HammerZoneRight1" type="Area2D" parent="."]
position = Vector2(15, 8)
collision_layer = 2048
collision_mask = 4105
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerZoneRight1"]
shape = SubResource("CapsuleShape2D_08jb5")

[node name="HammerZoneRight2" type="Area2D" parent="."]
position = Vector2(15, -6)
collision_layer = 2048
collision_mask = 4105
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerZoneRight2"]
shape = SubResource("CapsuleShape2D_08jb5")

[node name="HammerZoneLeft1" type="Area2D" parent="."]
position = Vector2(-15, 8)
collision_layer = 2048
collision_mask = 4105
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerZoneLeft1"]
shape = SubResource("CapsuleShape2D_08jb5")

[node name="HammerZoneLeft2" type="Area2D" parent="."]
position = Vector2(-15, -6)
collision_layer = 2048
collision_mask = 4105
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerZoneLeft2"]
shape = SubResource("CapsuleShape2D_08jb5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_504md")

[node name="Timers" type="Node2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.06

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.07
one_shot = true

[node name="Sound" type="Node2D" parent="."]

[node name="JumpNoise" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("5_jnhxm")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_80kms")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_504md")

[connection signal="slam_started" from="." to="." method="_on_slam_started"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
